examples/test/testpolicy13100.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13100
  namespace: namespace234
spec:
  podSelector:
    matchLabels:
      key44: value21
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key4: value30
          key31: value30
          key38: value5
      podSelector:
        matchLabels:
          key17: value8
